--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 bin/
 bin-debug/
 bin-release/
+.gradle/
 
 # Other files and folders
 .settings/
+.classpath
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
